# pyluxa4

./: .pyspelling.yml  .travis.yml  404.html  LICENSE.md  MANIFEST.in  README.md  hatch_build.py  index.html  lux.py  mkdocs.yml  pylux.py  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml
_snippets/: links.txt
_snippets/abbr/: index.html
_snippets/links/: index.html
_snippets/refs/: index.html
about/changelog/: index.html
about/contributing/: index.html
about/development/: index.html
about/license/: index.html
commands/: index.html
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: api.md  cli.md  commands.md  https.md  index.md  install.md  rest.md  usage.md  usb.md
docs/src/markdown/_snippets/: links.md
docs/src/markdown/about/: changelog.md  development.md  license.md
install/: index.html
pylux/: __init__.py  __main__.py  __meta__.py  cli.py  client.py  common.py  controller.py  server.py
pyluxa4/: __init__.py  __main__.py  __meta__.py  cli.py  client.py  common.py  csscolors.py  hid.py  scheduler.py  server.py  usb.py
requirements/: docs.txt  project.txt
rest/: index.html
search/: search_index.json
usage/: index.html
usb/: index.html
